--- a/main.scss
+++ b/main.scss
@@ -6,6 +6,17 @@
   font-family: "Montserrat", sans-serif;
 }
 
+// flexbox mixin
+
+@mixin flex($justify, $align, $direction: row) {
+  display: flex;
+  justify-content: $justify;
+  align-items: $align;
+  flex-direction: $direction;
+}
+
+// @media queries mixins
+
 $desktop: 1024px;
 @mixin desktop {
   @media screen and (max-width: #{$desktop}) {
@@ -54,11 +65,8 @@ body {
   .container {
     max-width: 70%;
     margin: 0em auto;
-    padding: 4em 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    padding: 1.5em 0;
+    @include flex(center, center, column);
     h1 {
       font-size: 30px;
       margin: 20px 0 10px;
@@ -89,9 +97,7 @@ body {
     }
     .input-grp {
       position: relative;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      @include flex(center, center);
       margin-bottom: 2px;
       input[type="text"] {
         width: 90%;
@@ -154,10 +160,7 @@ body {
       margin-top: 30px;
     }
     .gen-btns {
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-end;
-      align-items: center;
+      @include flex(flex-end, center, column);
       width: 50%;
       #generate {
         background-color: rgba(226, 93, 40, 0.95);
@@ -211,9 +214,7 @@ body {
     .radio-btns {
       width: 100%;
       min-height: 70px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      @include flex(center, center);
       margin: 30px 0 20px;
       .radio-btn {
         min-width: 160px;
@@ -228,9 +229,7 @@ body {
           display: none;
           pointer-events: none;
           & + label {
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            @include flex(center, center);
             font-size: 14px;
             cursor: pointer;
             .custom-radio {
@@ -239,9 +238,7 @@ body {
               border-radius: 50%;
               border: 2px solid #ee8844;
               position: relative;
-              display: flex;
-              align-items: center;
-              justify-content: center;
+              @include flex(center, center);
               div {
                 border-radius: 50%;
                 height: 0.5em;
@@ -280,9 +277,7 @@ body {
         & + label {
           cursor: pointer;
           font-size: 14px;
-          display: flex;
-          justify-content: center;
-          align-items: center;
+          @include flex(center, center);
           svg {
             width: 30px;
             stroke: #ee8844;
@@ -332,14 +327,10 @@ body {
         & + label {
           cursor: pointer;
           font-size: 14px;
-          display: flex;
-          justify-content: center;
-          align-items: center;
+          @include flex(center, center);
           padding: 5px 20px;
           .symbol-switch {
-            display: flex;
-            justify-content: flex-start;
-            align-items: center;
+            @include flex(flex-start, center);
             width: 45px;
             height: 25px;
             margin: 0 10px 0 20px;
@@ -371,10 +362,8 @@ body {
       width: 80%;
       min-width: 650px;
       margin: 20px 0;
+      @include flex(center, center, column);
       display: none;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
       .saved-password {
         width: 100%;
         padding: 30px 40px;
@@ -383,9 +372,7 @@ body {
         box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.02);
         border: 2px solid rgba(235, 235, 235, 0.6);
         border-radius: 8px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        @include flex(center, center);
         position: relative;
         .no-items-to-show {
           position: absolute;
@@ -441,15 +428,11 @@ body {
               margin-bottom: 20px;
             }
             .opt-pass {
-              display: flex;
-              justify-content: center;
-              align-items: center;
+              @include flex(center, center);
               div {
                 margin: 0 5px;
                 cursor: pointer;
-                display: flex;
-                justify-content: center;
-                align-items: center;
+                @include flex(center, center);
                 svg {
                   margin: 0 0.5em;
                   width: 15px;
@@ -548,6 +531,32 @@ body {
       }
     }
   }
+  footer {
+    width: 100%;
+    height: 10vh;
+    border-top: 1px solid rgba(122, 120, 120, 0.651);
+    background: #1d1c1c;
+    margin-top: 20px;
+    font-size: 16px;
+    color: #cccccc;
+    font-weight: 500;
+    @include flex(center, center);
+    svg {
+      width: 20px;
+      margin: 0 5px;
+      path {
+        fill: #d62323;
+      }
+    }
+    a {
+      text-decoration: none;
+      color: #ffffff;
+      margin: 0 5px;
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
   .pop-up-container,
   .saved-password-view {
     position: fixed;
@@ -562,16 +571,11 @@ body {
     min-width: 640px;
     min-height: 400px;
     background: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flex(center, center);
     transition: all 0.5s ease-in-out;
     .pop-up {
       width: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
+      @include flex(center, center, column);
       .pop-up-headline {
         font-size: 20px;
         color: #222222;
@@ -581,9 +585,7 @@ body {
     .sec1,
     .sec2,
     .sec3 {
-      display: flex;
-      justify-content: center;
-      align-items: flex-end;
+      @include flex(center, flex-end);
       width: 100%;
       margin: 20px 0;
       .copied-msg {
@@ -592,10 +594,7 @@ body {
         right: -20px;
         opacity: 0;
         pointer-events: none;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        @include flex(center, center, column);
         transform: translateY(10px);
         transition: all 0.3s ease-in-out;
         .text-msg {
@@ -647,9 +646,7 @@ body {
         padding: 0 25px;
         height: 50px;
         font-size: 14px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        @include flex(center, center);
         background: #cb3b3b;
         border: none;
         color: white;
@@ -728,7 +725,6 @@ body {
     }
     @include tablet {
       min-width: 600px;
-      // position: absolute;
     }
     @include bitLargerThanMobile {
       min-width: 90%;
@@ -839,19 +835,15 @@ body {
 }
 .alert-box {
   position: fixed;
-  // top: 20em;
   top: 50%;
   left: 50%;
-  z-index: 3;
+  z-index: 4;
   opacity: 0;
   pointer-events: none;
   transform: translate(-50%, -50%) scaleY(0);
   width: 300px;
   min-height: 120px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  @include flex(center, center, column);
   padding: 20px 10px;
   background-color: rgba($color: #ffffff, $alpha: 0.95);
   box-shadow: 7px 7px 5px rgba(0, 0, 0, 0.05), -7px -7px 5px rgba(0, 0, 0, 0.05);
